--- a/stylesheets/modules/_game1.scss
+++ b/stylesheets/modules/_game1.scss
@@ -73,6 +73,30 @@ body {
     }
 }
 
+// for iphone 6+ vertical view
+@media (max-width: 415px) and (max-height: 750px) {
+    .game1 {
+        height: 80vh;
+    }
+    .headerText {
+        font-size: 200%;
+    }
+    .bearContainer {
+        padding-top: 60px;
+        padding-bottom: 40px;
+    }
+    .answerOptionsItem3 {
+        height: 30vh;
+        max-width: 380px;
+        .answerBar1 {
+            font-size: 120%;        
+        }
+        .answerBar2 {
+            font-size: 120%;
+        }
+    }
+}
+
 
 // modiciation for iphone 6 n 4 vertical!
 @media (max-width: 400px) and (max-height: 700px) {
@@ -99,7 +123,7 @@ body {
 }
 
 // modification for iphone 6 n 4 horizontal
-@media (max-height: 400px) {
+@media (max-height: 430px) {
     .game1 {
         height: 80vh;
     }
